--- a/.github/workflows/deploy_website.yml
+++ b/.github/workflows/deploy_website.yml
@@ -1,7 +1,7 @@
-name: ci
+name: deploy_website
 
 on:
-  pull_request:
+  push:
     branches:
       - master
 
@@ -42,3 +42,12 @@ jobs:
 
       - name: Run linter 👀
         run: yarn lint
+
+      # - name: Generate
+      #   run: yarn run generate
+
+      # - name: Deploy
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: ./dist
